@@ -12,6 +12,10 @@
         - the "--brief" switch for mtn annotate has been renamed to
 	  "--revs-only" for clarity
 
+	- mtn help now lists the commands (and their aliases) available 
+          within a group, so its easier to get an overview which commands
+          are available at all
+
         Bugs fixed
 
         - mtn automate heads called without a branch argument now properly
